WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216824
webaudio/AudioParam/audioparam-setTarget-timeConstant-0.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=216824
Summary
webaudio/AudioParam/audioparam-setTarget-timeConstant-0.html is crashing
Chris Dumez
Reported
2020-09-22 08:39:48 PDT
webaudio/AudioParam/audioparam-setTarget-timeConstant-0.html has been crashing since its import from Blink: ASSERTION FAILED: !!timeConstant ./Modules/webaudio/AudioParamTimeline.cpp(886) : static UniqueRef<WebCore::AudioParamTimeline::ParamEvent> WebCore::AudioParamTimeline::ParamEvent::createSetTargetEvent(float, WTF::Seconds, float) 1 0x4c360a829 WTFCrash 2 0x4a5d1a1bb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x4a7ed6169 WebCore::AudioParamTimeline::ParamEvent::createSetTargetEvent(float, WTF::Seconds, float) 4 0x4a7ed60ae WebCore::AudioParamTimeline::setTargetAtTime(float, WTF::Seconds, float) 5 0x4a7eb0e31 WebCore::AudioParam::setTargetAtTime(float, double, float) 6 0x4a6311ff4 WebCore::jsAudioParamPrototypeFunctionSetTargetAtTimeBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSAudioParam*) 7 0x4a629b81c long long WebCore::IDLOperation<WebCore::JSAudioParam>::call<&(WebCore::jsAudioParamPrototypeFunctionSetTargetAtTimeBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSAudioParam*)), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) 8 0x4a629b4f4 WebCore::jsAudioParamPrototypeFunctionSetTargetAtTime(JSC::JSGlobalObject*, JSC::CallFrame*)
Attachments
Patch
(3.35 KB, patch)
2020-09-22 08:42 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-22 08:42:28 PDT
Created
attachment 409362
[details]
Patch
EWS
Comment 2
2020-09-22 09:29:41 PDT
Committed
r267413
: <
https://trac.webkit.org/changeset/267413
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409362
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-22 09:30:25 PDT
<
rdar://problem/69374957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug