webaudio/AudioParam/audioparam-setTarget-timeConstant-0.html is crashing https://bugs.webkit.org/show_bug.cgi?id=216824

Reviewed by Darin Adler.

Source/WebCore:

If the time constant pass to AudioParam.setTargetAtTime() is 0, then insert a SetValue event in
the timeline instead of a SetTarget one, causing us to instantly jump to the target value. This
matches the Blink behavior.

No new tests, unskipped existing test.

* Modules/webaudio/AudioParamTimeline.cpp:
(WebCore::AudioParamTimeline::setTargetAtTime):

LayoutTests:

Unskip test that is passing and no longer crashing.

* TestExpectations:


Canonical link: https://commits.webkit.org/229621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267413 268f45cc-cd09-0410-ab3c-d52691b4dbfc